--- a/Classes - Year 1/Algebra/HW4/Homework_4.tex
+++ b/Classes - Year 1/Algebra/HW4/Homework_4.tex
@@ -149,16 +149,16 @@ If $f\in \KK[X]$ (with $\KK$ field) has degree $n$ and $\FF$ is a splitting fiel
 \end{prob}
 
 \begin{proof}
-If $f$ has a degree $1$ over $\KK$, then it has only one zero $a$ whose minimal polynomial must have degree $1=[\KK(a):\KK]=[\FF:\KK]\mid 1!.$ If $f$ has degree $2$ over $\KK$, then it has at most two distinct zeros. Suppose $f$ is redicuble. Then it splits into two linear factors over $\KK$ and so $\FF\cong \KK\implies [\FF:\KK]=1\mid 2!$. Otherwise $f$ is irreducible, and so the minimal polynomial for a zero $a_{1}$ of $f$ must be of the form $\frac{f(x)}{\ell}$ for some $\ell\in \KK$, and therefore both zeros $a_{1}$ and $a_{2}$ share the same minimal polynomial $x^{2}+bx+c=(x-a_{1})(x-a_{2})\in \KK[x]$. So then $x^{2}-(a_{1}+a_{2})x+a_{1}a_{2}=x^{2}+bx+c\implies a_{2}=-b-a_{1}\in \KK(a)$ and so $\FF\cong \KK(a)\implies [\FF:\KK]\in \{1,2\}$ both of which divide $2!.$ Suppose $[\FF:\KK]\mid d!$ if $\FF$ is the splitting field of any degree $d$ polynomial $f$ over $\KK$ for all $1\leq d<m$ for some $m\geq 2$. Consider the statement for a degree $m$ polynomial $f$ over $\KK.\newline$
+  If $f$ has a degree $1$ over $\KK$, then it has only one zero $a$ whose minimal polynomial must have degree $1=[\KK(a):\KK]=[\FF:\KK]\mid 1!.$ If $f$ has degree $2$ over $\KK$, then it has at most two distinct zeros. Suppose $f$ is redicuble. Then it splits into two linear factors over $\KK$ and so $\FF\cong \KK\implies [\FF:\KK]=1\mid 2!$. Otherwise $f$ is irreducible, and so the minimal polynomial for a zero $a_{1}$ of $f$ must be of the form $\frac{f(x)}{\ell}$ for some $\ell\in \KK$, and therefore both zeros $a_{1}$ and $a_{2}$ share the same minimal polynomial $x^{2}+bx+c=(x-a_{1})(x-a_{2})\in \KK[x]$. So then $x^{2}-(a_{1}+a_{2})x+a_{1}a_{2}=x^{2}+bx+c\implies a_{2}=-b-a_{1}\in \KK(a)$ and so $\FF\cong \KK(a)\implies [\FF:\KK]\in \{1,2\}$ both of which divide $2!.$ Suppose $[\FF:\KK]\mid d!$ if $\FF$ is the splitting field of any degree $d$ polynomial $f$ over $\KK$ for all $1\leq d<m$ for some $m\geq 2$. Consider the statement for a degree $m$ polynomial $f$ over $\KK.\newline$
 
-If $f$ is reducible, then $f(x)=P(x)Q(x)$ for some non-constant degree $p$ and $(m-p)$ polynomials $P$ and $Q$ over $\KK$. Let $\FF_{P}$ be the splitting field of $P$ over $\KK$ and $\FF_{Q}$ be the splitting field of $Q$ over $\FF_{P}$. Since $\deg_{\KK}(P(x))=p,\,deg_{\FF_{P}}(Q(x))=deg_{\KK}(Q(x))=m-p<m$, we have that $[\FF_{Q}:\FF_{P}]\mid (m-p)!$ an $[\FF_{P}:\KK]\mid p!$. Well, $\FF_{Q}=(\FF_{P})(\alpha\mid Q(\alpha)=0)\cong (\KK(a\mid P(a)=0))(b\mid Q(b)=0)=\KK(\alpha\mid P(\alpha)=0\text{ or }Q(\alpha)=0)\cong \FF$. $\text{So finally, }\FF_{Q}\supseteq \FF_{P}\supseteq \KK\implies [\FF:\KK]=[\FF_{Q}:\KK]=[\FF_{Q}:\FF_{P}][\FF_{P}:\KK] \mid p!(m-p)!\mid m!\;(\text{via }\binom{p}{m}=\frac{m!}{p!(m-p)!}).$ So $[\FF:\KK]\mid m!$.
+  If $f$ is reducible, then $f(x)=P(x)Q(x)$ for some non-constant degree $p$ and $(m-p)$ polynomials $P$ and $Q$ over $\KK$. Let $\FF_{P}$ be the splitting field of $P$ over $\KK$ and $\FF_{Q}$ be the splitting field of $Q$ over $\FF_{P}$. Since $\deg_{\KK}(P(x))=p,\,deg_{\FF_{P}}(Q(x))=deg_{\KK}(Q(x))=m-p<m$, we have that $[\FF_{Q}:\FF_{P}]\mid (m-p)!$ an $[\FF_{P}:\KK]\mid p!$. Well, $\FF_{Q}=(\FF_{P})(\alpha\mid Q(\alpha)=0)\cong (\KK(a\mid P(a)=0))(b\mid Q(b)=0)=\KK(\alpha\mid P(\alpha)=0\text{ or }Q(\alpha)=0)\cong \FF$. $\text{So finally, }\FF_{Q}\supseteq \FF_{P}\supseteq \KK\implies [\FF:\KK]=[\FF_{Q}:\KK]=[\FF_{Q}:\FF_{P}][\FF_{P}:\KK] \mid p!(m-p)!\mid m!\;(\text{via }\binom{p}{m}=\frac{m!}{p!(m-p)!}).$ So $[\FF:\KK]\mid m!$.
 
-If $f$ is irreducible, then for any zero $a$ of $f$, $[\KK(a):\KK]=m$ and by the division algorithm we have $f(x)=(x-a)Q(x)$ over $\KK(a)$ where $Q$ has degree $m-1$. Since $Q$ has degree less than $m$, the splitting field $\FF_{Q}$ of $Q$ over $\KK(a)$ must be such that $[\FF_{Q}:\KK(a)]\mid (m-1)!$ and since $\FF_{Q}=(\KK(a))(\alpha \mid Q(\alpha)=0)=\KK(\alpha \mid x-\alpha =0 \text{ or }Q(\alpha)=0)\cong \FF$ we have that $[\FF:\KK]=[\FF_{Q}:\KK]=[\FF_{Q}:\FF_{P}][\FF_{P}:\KK]$ divides $m(m-1)!=m!$.
+  If $f$ is irreducible, then for any zero $a$ of $f$, $[\KK(a):\KK]=m$ and by the division algorithm we have $f(x)=(x-a)Q(x)$ over $\KK(a)$ where $Q$ has degree $m-1$. Since $Q$ has degree less than $m$, the splitting field $\FF_{Q}$ of $Q$ over $\KK(a)$ must be such that $[\FF_{Q}:\KK(a)]\mid (m-1)!$ and since $\FF_{Q}=(\KK(a))(\alpha \mid Q(\alpha)=0)=\KK(\alpha \mid x-\alpha =0 \text{ or }Q(\alpha)=0)\cong \FF$ we have that $[\FF:\KK]=[\FF_{Q}:\KK]=[\FF_{Q}:\FF_{P}][\FF_{P}:\KK]$ divides $m(m-1)!=m!$.
 
-Thus, by induction,
-\begin{center}
-If $\FF\supseteq \KK$ is the splitting field of a degree $n\in \ZZ^{+}$ polynomial over $\KK$, then $[\FF:\KK]\mid n!$.
-\end{center}
+  Thus, by induction,
+  \begin{center}
+  If $\FF\supseteq \KK$ is the splitting field of a degree $n\in \ZZ^{+}$ polynomial over $\KK$, then $[\FF:\KK]\mid n!$.
+  \end{center}
 \end{proof}
 
 \begin{prob}
@@ -224,15 +224,15 @@ If $\KK$ is a finite field of characteristic $p>0$, then inside a fixed algebrai
 \end{align}
 \end{cor}
 \begin{proof}
-(1) Suppose there exists some subfield $\mathbb{M}\subseteq \kk_{p}$ smaller than $\kk_{p}$, so $|\mathbb{M}|<|\kk_{p}|$. But then $0,1\in \mathbb{M}\implies \kk_{p}=\langle 1\rangle_{+}\subseteq \mathbb{M}\implies |\mathbb{M}|\geq |\kk_{p}|$, a contradiction. So $\kk_{p}$ must be the prime subfield of $\KK.\newline$
+  (1) Suppose there exists some subfield $\mathbb{M}\subseteq \kk_{p}$ smaller than $\kk_{p}$, so $|\mathbb{M}|<|\kk_{p}|$. But then $0,1\in \mathbb{M}\implies \kk_{p}=\langle 1\rangle_{+}\subseteq \mathbb{M}\implies |\mathbb{M}|\geq |\kk_{p}|$, a contradiction. So $\kk_{p}$ must be the prime subfield of $\KK.\newline$
 
-(2) By \textbf{Theorem 2.}, $\KK$ has dimension $n$ over $\kk_{p}$ for some $n\in \ZZ^{+}$. Now, for some $m\in \ZZ^{+}$ let $f_{p,n,m}(x)=x^{(p^{n})^{m}}-x\in \KK_{p}$ and $\KK_{m}=\{\alpha\in \overline{\KK}\mid f_{p,n,m}(\alpha)=0\}$. Observe.$\newline$
+  (2) By \textbf{Theorem 2.}, $\KK$ has dimension $n$ over $\kk_{p}$ for some $n\in \ZZ^{+}$. Now, for some $m\in \ZZ^{+}$ let $f_{p,n,m}(x)=x^{(p^{n})^{m}}-x\in \KK_{p}$ and $\KK_{m}=\{\alpha\in \overline{\KK}\mid f_{p,n,m}(\alpha)=0\}$. Observe.$\newline$
 
-For any $\alpha, \beta\in \KK_{m}$ with $\beta\neq 0$, $f_{p,n,m}(\alpha-\beta)=(\alpha-\beta)^{p^{nm}}-(\alpha-\beta)=(\sum_{i=0}^{p^{mn}}\binom{p^{nm}}{i}\alpha^{p^{mn}-i}(-\beta)^{i})-(\alpha-\beta)=(\alpha^{p^{mn}}+(-\beta)^{p^{mn}})-(\alpha-\beta)$ since $\binom{p^{mn}}{0}=\binom{p^{mn}}{p^{mn}}=1$ and $p\mid \binom{p^{nm}}{i}$ for all $0<i<p^{mn}$ (I am uninterested in proving this part.) and since $p=0$ we get that in fact $f_{p,n,m}(\alpha-\beta)=(\alpha^{p^{nm}}-\beta^{p^{nm}})-(\alpha-\beta)=\alpha-\beta - (\alpha - \beta)=0$. Note that this holds for $p=2$ since $-\alpha=\alpha$ in a field with characteristic $2$. Therefore, $\alpha-\beta\in \KK_{m}$. Next, $f_{p,n,m}(\alpha\beta^{-1})=(\alpha\beta)^{p^{mn}}=\alpha^{p^{nm}}\beta^{-p^{nm}}-(\alpha\beta^{-1})=\alpha(\beta^{p^{mn}})^{-1}-\alpha\beta^{-1}=\alpha(\beta)^{-1}-\alpha\beta^{-1}=0\implies \alpha\beta^{-1}\in \KK_{m}.\newline$
+  For any $\alpha, \beta\in \KK_{m}$ with $\beta\neq 0$, $f_{p,n,m}(\alpha-\beta)=(\alpha-\beta)^{p^{nm}}-(\alpha-\beta)=(\sum_{i=0}^{p^{mn}}\binom{p^{nm}}{i}\alpha^{p^{mn}-i}(-\beta)^{i})-(\alpha-\beta)=(\alpha^{p^{mn}}+(-\beta)^{p^{mn}})-(\alpha-\beta)$ since $\binom{p^{mn}}{0}=\binom{p^{mn}}{p^{mn}}=1$ and $p\mid \binom{p^{nm}}{i}$ for all $0<i<p^{mn}$ (I am uninterested in proving this part.) and since $p=0$ we get that in fact $f_{p,n,m}(\alpha-\beta)=(\alpha^{p^{nm}}-\beta^{p^{nm}})-(\alpha-\beta)=\alpha-\beta - (\alpha - \beta)=0$. Note that this holds for $p=2$ since $-\alpha=\alpha$ in a field with characteristic $2$. Therefore, $\alpha-\beta\in \KK_{m}$. Next, $f_{p,n,m}(\alpha\beta^{-1})=(\alpha\beta)^{p^{mn}}=\alpha^{p^{nm}}\beta^{-p^{nm}}-(\alpha\beta^{-1})=\alpha(\beta^{p^{mn}})^{-1}-\alpha\beta^{-1}=\alpha(\beta)^{-1}-\alpha\beta^{-1}=0\implies \alpha\beta^{-1}\in \KK_{m}.\newline$
 
-So $\KK_{m}$ is a subfield of $\overline{\KK}$ in which $f_{p,n,m}(x)$ splits completely. Suppose there is a smaller such field $\mathbb{M}$ that $f_{p,n,m}(x)$ splits completely over, so $|\mathbb{M}|<|\KK_{m}|$. But then $\KK_{m}=\{\alpha\in \overline{\KK}\mid f_{p,n,m}(\alpha)=0\}\subseteq \mathbb{M}\implies |\mathbb{M}|\geq |\KK_{m}|$, a contradiction. So $\KK_{m}$ must be a splitting field of $f_{p,n,m}(x)$ over $\kk_{p}$. Finally, $a^{(p^{n})}=a$ for all $a\in \KK$. Suppose that for any $a\in \KK$, $a^{(p^{n})^{c}}=a$ for some $c\geq 1$. Then, $a^{(p^{n})^{c+1}}=(a^{(p^{n})^{c}})^{p^{n}}=(a)^{p^{n}}=a.$ Therefore, by induction $a^{(p^{n})^{c}}=a$ for all $c\geq 1$. So then every element $a\in \KK$ is a zero of $f_{p,n,m}(x)=x^{(p^{n})^{m}}-x$ and $\KK_{m}\supseteq \KK \supseteq \kk_{p}$. So then we have $[\KK_{m}:\kk_{p}]=[\KK_{m}:\KK][\KK:\kk_{p}]=nm=[\KK_{m}:\KK]n\implies [\KK_{m}:\KK]=m$. Suppose some other distinct extension $\EE_{m}\supseteq \KK$ of degree $m$ over $\KK$ exists. Well, it has order $p^{nm}$ and all of it's elements must be zeros of $f_{p,n,m}(x)$ via $|\EE_{m}^{*}|=p^{n}-1$, and then since $\KK_{m}-\EE_{m}\neq \emptyset$ we have that $|\KK_{m}\cup \EE_{m}|>p^{nm}$ and so $f_{n,p,m}(x)$ has more than $p^{nm}$ distinct zeros, a contradiction. So $\KK_{m}$ is the unique extension with $[\KK_{m}:\KK]=m$ with respect to the closure $\overline{\KK}.\newline$
+  So $\KK_{m}$ is a subfield of $\overline{\KK}$ in which $f_{p,n,m}(x)$ splits completely. Suppose there is a smaller such field $\mathbb{M}$ that $f_{p,n,m}(x)$ splits completely over, so $|\mathbb{M}|<|\KK_{m}|$. But then $\KK_{m}=\{\alpha\in \overline{\KK}\mid f_{p,n,m}(\alpha)=0\}\subseteq \mathbb{M}\implies |\mathbb{M}|\geq |\KK_{m}|$, a contradiction. So $\KK_{m}$ must be a splitting field of $f_{p,n,m}(x)$ over $\kk_{p}$. Finally, $a^{(p^{n})}=a$ for all $a\in \KK$. Suppose that for any $a\in \KK$, $a^{(p^{n})^{c}}=a$ for some $c\geq 1$. Then, $a^{(p^{n})^{c+1}}=(a^{(p^{n})^{c}})^{p^{n}}=(a)^{p^{n}}=a.$ Therefore, by induction $a^{(p^{n})^{c}}=a$ for all $c\geq 1$. So then every element $a\in \KK$ is a zero of $f_{p,n,m}(x)=x^{(p^{n})^{m}}-x$ and $\KK_{m}\supseteq \KK \supseteq \kk_{p}$. So then we have $[\KK_{m}:\kk_{p}]=[\KK_{m}:\KK][\KK:\kk_{p}]=nm=[\KK_{m}:\KK]n\implies [\KK_{m}:\KK]=m$. Suppose some other distinct extension $\EE_{m}\supseteq \KK$ of degree $m$ over $\KK$ exists. Well, it has order $p^{nm}$ and all of it's elements must be zeros of $f_{p,n,m}(x)$ via $|\EE_{m}^{*}|=p^{n}-1$, and then since $\KK_{m}-\EE_{m}\neq \emptyset$ we have that $|\KK_{m}\cup \EE_{m}|>p^{nm}$ and so $f_{n,p,m}(x)$ has more than $p^{nm}$ distinct zeros, a contradiction. So $\KK_{m}$ is the unique extension with $[\KK_{m}:\KK]=m$ with respect to the closure $\overline{\KK}.\newline$
 
-(3) By (2), we immediately get that there exists a unique extension $\kk_{p,d}\supseteq \kk_{p}$ with $[\kk_{p,d}:\kk_{p}]=d$ for each divisior $d|n$ which is a splitting field for $f_{p,m,d}(x)=x^{p^{d}}-x$ over $\KK_{p}$. For any such divisor $d|n$, $a^{p^{d}}=a$ for all $a\in \kk_{p,d}$. So then since $d|n, n=dq$ for some $q\in \ZZ^{+}$ and therefore by the induction earlier replacing $\KK$ with $\kk_{p,d}$ we get that $a^{p^{n}}=a^{p^{dq}}=a$ for all $a\in \kk_{p,d}$. Therefore every element in $\kk_{p,d}$ is a zero of $f_{p,n}(x)=x^{p^{n}}-a$ over $\kk_{p}$, and since $\KK$ is a splitting field for $f_{p,n}(x)$ in fact we have that $\KK\supseteq \kk_{p,d}\supseteq \kk_{p}$. So then for each divisor $d\mid n$, $\kk_{p,d}$, the splitting field of $f_{p,d}$ over $\kk_{p}$, is a unique subfield of $\KK$ with $[\kk_{p,d}:\kk_{p}]=d$.
+  (3) By (2), we immediately get that there exists a unique extension $\kk_{p,d}\supseteq \kk_{p}$ with $[\kk_{p,d}:\kk_{p}]=d$ for each divisior $d|n$ which is a splitting field for $f_{p,m,d}(x)=x^{p^{d}}-x$ over $\KK_{p}$. For any such divisor $d|n$, $a^{p^{d}}=a$ for all $a\in \kk_{p,d}$. So then since $d|n, n=dq$ for some $q\in \ZZ^{+}$ and therefore by the induction earlier replacing $\KK$ with $\kk_{p,d}$ we get that $a^{p^{n}}=a^{p^{dq}}=a$ for all $a\in \kk_{p,d}$. Therefore every element in $\kk_{p,d}$ is a zero of $f_{p,n}(x)=x^{p^{n}}-a$ over $\kk_{p}$, and since $\KK$ is a splitting field for $f_{p,n}(x)$ in fact we have that $\KK\supseteq \kk_{p,d}\supseteq \kk_{p}$. So then for each divisor $d\mid n$, $\kk_{p,d}$, the splitting field of $f_{p,d}$ over $\kk_{p}$, is a unique subfield of $\KK$ with $[\kk_{p,d}:\kk_{p}]=d$.
 
 \end{proof}
 \end{singlespace}
@@ -249,11 +249,11 @@ Let $k$ be a finite field of characteristic $p>0$.
 \end{enumerate}
 \end{prob}
 \begin{proof}
-Fix some algebraic closure $\overline{\KK}\supseteq \KK$. Every object that follows is contained in $\overline{\KK}$. By our theorems, if $\KK$ is a finite field of characteristic $p>0$, $p$ is prime and $\KK$ is an $n$-dimensional $\langle 1\rangle_{+}=\kk_{p}$-vector space for some $n\in \ZZ^{+}$. Also, there exists a unique extension $\KK_{m}$ of $\KK$ with $[\KK_{m}:\KK]=m$ for each $m\in \ZZ^{+}$. Finally, both $\KK$ and $\KK_{m}$ are unique splitting fields of $f_{p,n}=x^{p^{n}}-x$ and $f_{p,n,m}=x^{p^{nm}}$, respectively, over $\kk_{p}$ with respect to $\overline{\KK}$. Suppose that for all $\alpha\in \KK_{m}$, the degree of $\alpha$ over $\KK$ is strictly less than $[\KK_{m}:\KK]=m$. Any $\alpha$ must belong to $\KK(\alpha)\subseteq \KK_{m}$ and $[\KK(\alpha):\KK]=d$ for some divisor $0<d<nm$ of $[\KK_{m}:\kk_{p}]=nm$. Well, by our theorems this must be the unique subfield $\kk_{p,d}$ of order $p^{d}$. Therefore,
-$$\KK_{m}=\bigcup_{\substack{d\mid nm\\ 0<d<nm}} \kk_{p,d}\implies |\KK_{m}|=p^{nm}=|\bigcup_{\substack{d\mid nm\\ 0<d<nm}} \kk_{p,d}|\leq \sum_{\substack{d\mid nm\\ 0<d<nm}}p^{d}<\sum_{i=0}^{nm-1}p^{i}=\frac{p^{nm}-1}{1-p}<p^{nm},$$
-a contradiction. (Another contradiction is just the fact that then every $\alpha\in \KK_{m}$ belongs to $\kk_{p,d}$ for the largest $d<nm$ that divides $nm$ and is less than $m$, but $|\KK_{m}|$ is strictly less than $p^{nm}$. We did not prove directly that all these subfields are nested, so I didn't do that.) Therefore, there exists an element $\alpha_{m}\in \KK_{m}$ with degree $m$ over $\KK$, and so there exists a monic irreducible polynomial of $\alpha_{m}$ over $\KK$ with degree $m$, that is $\KK_{m}=\KK(\alpha_{m}).\newline$
+  Fix some algebraic closure $\overline{\KK}\supseteq \KK$. Every object that follows is contained in $\overline{\KK}$. By our theorems, if $\KK$ is a finite field of characteristic $p>0$, $p$ is prime and $\KK$ is an $n$-dimensional $\langle 1\rangle_{+}=\kk_{p}$-vector space for some $n\in \ZZ^{+}$. Also, there exists a unique extension $\KK_{m}$ of $\KK$ with $[\KK_{m}:\KK]=m$ for each $m\in \ZZ^{+}$. Finally, both $\KK$ and $\KK_{m}$ are unique splitting fields of $f_{p,n}=x^{p^{n}}-x$ and $f_{p,n,m}=x^{p^{nm}}$, respectively, over $\kk_{p}$ with respect to $\overline{\KK}$. Suppose that for all $\alpha\in \KK_{m}$, the degree of $\alpha$ over $\KK$ is strictly less than $[\KK_{m}:\KK]=m$. Any $\alpha$ must belong to $\KK(\alpha)\subseteq \KK_{m}$ and $[\KK(\alpha):\KK]=d$ for some divisor $0<d<nm$ of $[\KK_{m}:\kk_{p}]=nm$. Well, by our theorems this must be the unique subfield $\kk_{p,d}$ of order $p^{d}$. Therefore,
+  $$\KK_{m}=\bigcup_{\substack{d\mid nm\\ 0<d<nm}} \kk_{p,d}\implies |\KK_{m}|=p^{nm}=|\bigcup_{\substack{d\mid nm\\ 0<d<nm}} \kk_{p,d}|\leq \sum_{\substack{d\mid nm\\ 0<d<nm}}p^{d}<\sum_{i=0}^{nm-1}p^{i}=\frac{p^{nm}-1}{1-p}<p^{nm},$$
+  a contradiction. (Another contradiction is just the fact that then every $\alpha\in \KK_{m}$ belongs to $\kk_{p,d}$ for the largest $d<nm$ that divides $nm$ and is less than $m$, but $|\KK_{m}|$ is strictly less than $p^{nm}$. We did not prove directly that all these subfields are nested, so I didn't do that.) Therefore, there exists an element $\alpha_{m}\in \KK_{m}$ with degree $m$ over $\KK$, and so there exists a monic irreducible polynomial of $\alpha_{m}$ over $\KK$ with degree $m$, that is $\KK_{m}=\KK(\alpha_{m}).\newline$
 
-Now, consider any irreducible polynomial $P(x)\in \KK[x].$ It must have some degree $q\in \ZZ^{+}$, and some zero $\alpha$ with the minimal polynomial $P_{\alpha}(x)=\frac{P(x)}{a}\in \KK[x]$ where $a\in \KK$ is the leading coefficient of $P(x)$. So then $\alpha$ has degree $q$ over $\KK$ and $[\KK(\alpha):\KK]=q$. Therefore, by our theorems, $\KK(\alpha)=\KK_{q}\subseteq \overline{\KK}$, the splitting field of $f_{p,n,q}(x)=x^{p^{nq}}-x$ over $\kk_{p}$. Well, $\alpha\in \KK_{q}\implies |\alpha|_{_{\boldsymbol{\cdot}}}$ divides $|\KK_{q}^{*}|=p^{nq}-1$ and so $\alpha^{p^{nq}-1}=1\implies \alpha^{p^{nq}}=\alpha\implies f_{p,n,q}(\alpha)=(\alpha)^{p^{nq}}-\alpha=0$. So $\alpha$ is a zero of $f_{p,n,q}(x)=x^{p^{nq}}-x$ over $\kk_{p}$, which is also a polynomial over $\KK$.
+  Now, consider any irreducible polynomial $P(x)\in \KK[x].$ It must have some degree $q\in \ZZ^{+}$, and some zero $\alpha$ with the minimal polynomial $P_{\alpha}(x)=\frac{P(x)}{a}\in \KK[x]$ where $a\in \KK$ is the leading coefficient of $P(x)$. So then $\alpha$ has degree $q$ over $\KK$ and $[\KK(\alpha):\KK]=q$. Therefore, by our theorems, $\KK(\alpha)=\KK_{q}\subseteq \overline{\KK}$, the splitting field of $f_{p,n,q}(x)=x^{p^{nq}}-x$ over $\kk_{p}$. Well, $\alpha\in \KK_{q}\implies |\alpha|_{_{\boldsymbol{\cdot}}}$ divides $|\KK_{q}^{*}|=p^{nq}-1$ and so $\alpha^{p^{nq}-1}=1\implies \alpha^{p^{nq}}=\alpha\implies f_{p,n,q}(\alpha)=(\alpha)^{p^{nq}}-\alpha=0$. So $\alpha$ is a zero of $f_{p,n,q}(x)=x^{p^{nq}}-x$ over $\kk_{p}$, which is also a polynomial over $\KK$.
 
 \end{proof}
 \newpage
@@ -262,30 +262,51 @@ Let $p$ be a prime and $\mathbb{F}_{q}$ (with $q=p^{s}$) be the finite field wit
 \end{prob}
 
 \begin{proof}
-Let $f(x)$ be an irreducible polynomial over $\FF_{p^{n}}$ with degree $\deg{f(x)}=d$ for some prime $p$ and some $n\geq 1$. Also, let $f_{p,N}(x)=x^{p^{N}}-x$ over $\FF_{p}$ for any $N\in \ZZ^{+}$ and recall that every element of $\FF_{p^{nN}}$, the splitting field of $f_{p,N}(x)$, is a zero of $f_{p,N}(x)$.
+  Let $f(x)$ be an irreducible polynomial over $\FF_{p^{n}}$ with degree $\deg{f(x)}=d$ for some prime $p$ and some $n\geq 1$. Also, let $f_{p,N}(x)=x^{p^{N}}-x$ over $\FF_{p}$ for any $N\in \ZZ^{+}$ and recall that every element of $\FF_{p^{nN}}$, the splitting field of $f_{p,N}(x)$, is a zero of $f_{p,N}(x)$.
 
-Now, since $f(x)$ is irreducible over $\FF_{p^{n}}$, any zero $\alpha$ of $f(x)$ has the minimal polynomial $p_{\alpha}(x)=\frac{f(x)}{c}$ over $\FF_{p^{n}}$ where $c$ is the leading coefficient of $f(x)$ and so it has degree $d$ over $\FF_{p^{n}}$. That is, $\FF_{p^{n}}(\alpha)=\FF_{p^{nd}}$. So then $\alpha$ is a zero of $f_{p,nd}(x)$, and we also have that $d$ is smallest integer such that $\alpha^{p^{nd}}=\alpha$. Furthermore, $\alpha^{nk}=\alpha\iff d\mid k$. 
+  Now, since $f(x)$ is irreducible over $\FF_{p^{n}}$, any zero $\alpha$ of $f(x)$ has the minimal polynomial $p_{\alpha}(x)=\frac{f(x)}{c}$ over $\FF_{p^{n}}$ where $c$ is the leading coefficient of $f(x)$ and so it has degree $d$ over $\FF_{p^{n}}$. That is, $\FF_{p^{n}}(\alpha)=\FF_{p^{nd}}$. So then $\alpha$ is a zero of $f_{p,nd}(x)$, and we also have that $d$ is smallest integer such that $\alpha^{p^{nd}}=\alpha$. Furthermore, $\alpha^{nk}=\alpha\iff d\mid k$. 
 
-$(\implies)$ If $f(x)$ is irreducible over $\FF_{p^{nm}}$, then $\alpha$ has degree $d$ over both $\FF_{p^{n}}$ and $\FF_{p^{nm}}$. So $\alpha=k_{1}=k_{2}$ is the smallest integer such that $\alpha^{p^{nk_{1}}}=\alpha^{p^{nmk_{2}}}=\alpha$. Additionally, the previous equalities hold for any multiples $k_{1},k_{2}\geq 1$ of $d$. Suppose $g=\gcd(d,m)>1$, then $\frac{d}{g}=\ell_{d}< d,\frac{m}{g}=\ell_{m}< m$. Observe. 
-  $$ m\ell_{d}=m\frac{d}{g}=\frac{m}{g}d=d\ell_{m}\implies \alpha^{p^{nm\ell_{d}}}=\alpha^{p^{nm(\frac{d}{g})}}=\alpha^{p^{nd(\frac{m}{g})}}=\alpha^{p^{nd\ell_{m}}}=\alpha.$$
-But then there is a smaller positive integer $k_{2}=\ell_{d}<d$ such that $\alpha^{nmk_{2}}=\alpha$, a contradiction. So we must have that $\gcd(d,m)=1$.
+  $(\implies)$ If $f(x)$ is irreducible over $\FF_{p^{nm}}$, then $\alpha$ has degree $d$ over both $\FF_{p^{n}}$ and $\FF_{p^{nm}}$. So $\alpha=k_{1}=k_{2}$ is the smallest integer such that $\alpha^{p^{nk_{1}}}=\alpha^{p^{nmk_{2}}}=\alpha$. Additionally, the previous equalities hold for any multiples $k_{1},k_{2}\geq 1$ of $d$. Suppose $g=\gcd(d,m)>1$, then $\frac{d}{g}=\ell_{d}< d,\frac{m}{g}=\ell_{m}< m$. Observe. 
+    $$ m\ell_{d}=m\frac{d}{g}=\frac{m}{g}d=d\ell_{m}\implies \alpha^{p^{nm\ell_{d}}}=\alpha^{p^{nm(\frac{d}{g})}}=\alpha^{p^{nd(\frac{m}{g})}}=\alpha^{p^{nd\ell_{m}}}=\alpha.$$
+  But then there is a smaller positive integer $k_{2}=\ell_{d}<d$ such that $\alpha^{nmk_{2}}=\alpha$, a contradiction. So we must have that $\gcd(d,m)=1$.
 
-$(\impliedby)$ On the other hand, if $\gcd(d,m)=1$, recall that that $d$ is the smallest positive integer $d=k_{1}$ such that $\alpha^{p^{nk_{1}}}=\alpha$ for any zero $\alpha$ of $f(x)$. So for any $k_{2}\geq 1$ such that $\alpha^{p^{nmk_{2}}}=\alpha$, we must have that $d\mid mk_{2}$. Suppose we have such a $k_{2}$ less than $d$. But then $\gcd(d,m)=1\text{ and }d\mid mk_{2}\implies d\mid k_{2}$ and $k_{2}<d$, which is impossible. So the smallest such $k_{2}=d$, which is also the degree of $\alpha$ over $\FF_{p^{nm}}$. Since degree of any zero $\alpha$ of $f(x)$ is $d$ over $\FF_{p^{nm}}$, $f(x)$ must be irreducible over $\FF_{p^{nm}}$. (Otherwise we have some minimal polynomial of degree less than d which can be pulled out of $f(x)$ over $\FF_{p^{nm}}$).
-
+  $(\impliedby)$ On the other hand, if $\gcd(d,m)=1$, recall that that $d$ is the smallest positive integer $d=k_{1}$ such that $\alpha^{p^{nk_{1}}}=\alpha$ for any zero $\alpha$ of $f(x)$. So for any $k_{2}\geq 1$ such that $\alpha^{p^{nmk_{2}}}=\alpha$, we must have that $d\mid mk_{2}$. Suppose we have such a $k_{2}$ less than $d$. But then $\gcd(d,m)=1\text{ and }d\mid mk_{2}\implies d\mid k_{2}$ and $k_{2}<d$, which is impossible. So the smallest such $k_{2}=d$, which is also the degree of $\alpha$ over $\FF_{p^{nm}}$. Since degree of any zero $\alpha$ of $f(x)$ is $d$ over $\FF_{p^{nm}}$, $f(x)$ must be irreducible over $\FF_{p^{nm}}$. (Otherwise we have some minimal polynomial of degree less than d which can be pulled out of $f(x)$ over $\FF_{p^{nm}}$).
 
 \end{proof}
-
+\newpage
 \begin{prob}
 Prove that $E=\mathbb{F}_{2}[X]/(X^{4}+X^{3}+1)$ is a field with $16$ elements. What are the roots of $X^{4}+X^{3}+1$ in $E$?
 \end{prob}
 
+\begin{proof}
+  Let $p(x)=x^{4}+x^{3}+1\in \FF_{2}$. $p(0)=p(1)=1\neq 0$, so $p(x)$ has no zeros in $\FF_{2}$ and therefore no linear factors over $\FF_{2}$, which means it can't factor into a linear and cubic. Suppose $p(x)$ is reducible. Then must split into two irreducible quadratics over $\FF_{2}$. These quadratics must have a non-zero constant and leading coefficient, which must then be $1\in \FF_{2}$, otherwise $x$ would divide them along with $p(x)$ or they wouldn't be quadratic at all. So then a factor $p(x)$ could only be $x^{2}+x+1$ or $x^{2}+1$. However, notice that $x^{2}+1$ has $1$ as a zero, so $x-1$ divides it, and would have to then divide $p(x)$. Therefore, we must have that $p(x)$ has only one possible (repeated) factor: $x^{2}+x+1$. Well, since $\Char{\FF_{2}}=2$, we have Freshman's dream for multiples of $2$ and so $(x^{2}+x+1)^{2}=((x^{2})+(x+1))^{2}=x^{4}+x^{2}+2x+1=x^{4}+x^{2}+1\neq x^{4}+x^{3}+1=p(x)$, a contradiction. So $p(x)$ must be irreducible over $\FF_{2}.$
+
+  Since $p(x)$ is monic and irredicuble, $\langle p(x)\rangle$ is a maximal ideal, and so $\EE=\FF_{2}[x]/\langle x^{4}+x^{3}+1\rangle$ is a field extension that is also a $4$-dimensional $\FF_{2}$-vector space. Therefore $|\FF_{2}[x]/\langle x^{4}+x^{3}+1\rangle|2^{4}=16$. Now we will just use the shorthand $x\coloneq [x]$ since we work in $\EE$ for the remainder of this proof. 
+
+  $\EE=\Span\{1,x,x^{2},x^{3}\}$. Now, since $x^{4}+x^{3}+1=0$ in this field, $x^{4}=-x^{3}-1=x^{3}+1$, and obviously $x$ is a root of $p(x)=x^{4}+x^{3}+1$ over $\EE$. Then, recall that since $\EE\cong \FF_{2^{4}}$, a finite field with characteristic $2$, we must have that the Frobenius endomorphism $\varphi_{2}(x)=x^{2}$ is an automorphism in $\mathrm{Aut}_{\FF_{2}}(\FF_{2^{4}})$. So then it permutes roots of any $f(x)\in \FF_{2}$ in any extension of $\FF_{2}$ to each other. Therefore, the orbit $\langle x\rangle\varphi_{2}=\{x\}\cup \{x^{2}\}\cup \{x^{4}=x^{3}+1\} \cup \{x^{8}=(x^{4})^{2}=(x^{3}+1)^{2}=x^{6}+1=(x^{3}+x^{2}+x+1)+1=x^{3}+x^{2}+x\}\cup \cdots = \{x,x^{2},x^{3}+1,x^{3}+x^{2}+x\}$ must be all roots of $p(x)$ over $\EE$, since they are four distinct elements and $p(x)$ has at most four distinct roots.
+
+\end{proof}
+
+Heres the computation used to find $x^{6}$. $x^{4}=x^{3}+1\implies x^{5}=x(x^{4})=x(x^{3}+1)=x^{4}+x=x^{3}+x+1\implies x^{6}=x(x^{5})=x(x^{3}+x+1)=x^{4}+x^{2}+x=(x^{3}+1)+x^{2}+x=x^{3}+x^{2}+x+1$
+\newpage
 \begin{prob}
 Prove that an algebraic extension of a perfect field is a perfect field.
 \end{prob}
 
+\begin{proof}
+Let $\KK$ be a perfect field. If $\KK$ has characteristic $0$, then so does any extension of it since they share $1$, and so any algebraic extension of $\KK$ must be perfect.
+
+If $\KK$ has characteristic $p>0$. Since $\KK$ is perfect, every irreducible polynomial $f(x)$ over $\KK$ has no repeated roots in some splitting field $\FF_{f(x)}$ of $f(x)$. That is, the minimal polynomial of any algebraic element has no repeated linear factors in $\FF_{P(x)}$.
+
+Therefore, if $\EE$ is some algebraic extension of $\KK$, then any $\alpha\in \EE$ is algebraic over $\KK$. It's minimal polynomial $P_{\alpha,\KK}(x)$ over $\KK$ has no repeated roots some splitting field $\FF_{P(x)}$ of $P(x)$. Now, since $\alpha$ is a zero of $P_{\alpha,\KK}(x)$ which also belongs to $\EE[x]$, the minimal polynomial $P_{\alpha,\EE}(x)$ of $\alpha$ over $\EE$ must divide $P_{\alpha,\KK}(x)$ over $\EE$. Therefore, $P_{\alpha,\EE}(x)$ must split completely over $\FF_{P(x)}$ into distinct linear factors as well, since otherwise $P_{\alpha,\KK}(x)$ is divisible by some repeated linear factor of $P_{\alpha,\EE}(x)\mid P_{\alpha,\KK}(x)\in \FF_{P(x)}[x]$, a contradiction. So every minimal polynomial over $\EE$ is seperable. Since every irreducible polynomial over $\EE$ is simply some minimal polynomial of one of it's zeros, which we proved is seperable, scaled by some $c\in \EE$, every irreducible over $\EE$ is also seperable. Therefore, $\EE$ is perfect.
+
+\end{proof}
+\newpage
 \begin{prob}
 Show that the extension $\mathbb{Q}\subseteq \mathbb{Q}\!\left(\sqrt[4]{2},\, i\right)$ is Galois. Find its Galois group.
 \end{prob}
+
+
 
 
 \end{document}
